Sat Oct 30 10:14:35 BST 1999 Nick Lamb <njl195@zepler.org>
	* app/fileops.c: Fix #3179 (Revert uses wrong filename)

1999-10-29  Michael Natterer  <mitch@gimp.org>

	* app/brush_select.c
	* app/gradient_select.c
	* app/pattern_select.c: call the PDB callback from the context
	callback because it gets called on every change.

	* app/interface.c: the tool buttons had the wrong private tooltips
	attached.

	* app/gimphelp.c: call the help browser with plug_in_run() instead
	of procedural_db_execute() to make it really ansynchronous.
	Added a GtkTipsQuery tooltips inspector which gets invoked by
	<Shift>+F1. Did some illegal juggling with the tips_query's
	"parent" pointer which may cause problems, so I made the stuff
	disable-able with #ifdef's.
	Is there a proper way to create a tips_query widget without having
	to show it somewhere??

Thu Oct 28 23:22:34 BST 1999 Andy Thomas <alt@gimp.org>

	* app/gimpimage.c

	Fixed memory leak with image is deleted.

	* plug-ins/common/jpeg.c

	Fixed the way the plugin added layers. Preview stuff does not now
	get corrupted.

1999-10-28  Michael Natterer  <mitch@gimp.org>

	* app/Makefile.am
	* app/gradient_select.h
	* app/gradientP.h: new files. Put the function prototypes from
	gradient_header.h there and renamed them to match the naming
	scheme used elsewhere.

	* app/gradient.[ch]
	* app/gradient_cmds.c
	* app/gradient_header.h
	* app/gradient_select.c
	* app/gradient_select_cmds.c
	* tools/pdbgen/pdb/gradient.pdb
	* tools/pdbgen/pdb/gradient_select.pdb: separated the gradient
	editor and the selections (no more common variables used).
	Allocate own contexts for each gradient selection. Tweaked the
	code and function names to match the brush and pattern selection.
	Enabled dropping gradients to the editor and the selections.
	Renamed all public functions of the gradient editor (see above).

	* app/app_procs.c
	* app/commands.[ch]
	* app/menus.c
	* app/plug_in.c
	* app/session.c: changed according to the new gradient function